--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "task.h": "c",
         "freertos.h": "c",
         "esp_lvgl_port.h": "c",
-        "esp_lcd_panel_vendor.h": "c"
+        "esp_lcd_panel_vendor.h": "c",
+        "esp_err.h": "c"
     }
 }
