--- a/components/LVGL_MY/CMakeLists.txt
+++ b/components/LVGL_MY/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "LVGL_init_my.h""LVGL_init_my.c"
+idf_component_register(SRCS "LVGL_init_my.h""LVGL_init_my.c" "lvgl_demo_ui.c""lvgl_demo_ui.h"
                     INCLUDE_DIRS "."
                     REQUIRES "esp_lcd" "lvgl" "esp_lvgl_port" "LCD"
                     )
