add uart_init API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "freertos.h": "c",
         "esp_lvgl_port.h": "c",
         "esp_lcd_panel_vendor.h": "c",
-        "esp_err.h": "c"
+        "esp_err.h": "c",
+        "lvgl.h": "c"
     }
 }
